mido: Switch to custom thermal config
Signed-off-by: Kingsman44 <shivan.0972@gmail.com>

--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -1,84 +1,113 @@
-# Custom thermal configuration for msm8953 4.9 kernel
-# Author: Rama Bondan Prakoso (rama982@telegram)
-# Thanks to Xiaomi and Asus
+# SENSOR : ALIAS
 
-# TYPE : AVAILABLE_VALUE
-# cpu0 : 652800 1036800 1401600 1689600 1804800 1958400 2016000
-# gpu : 133330000 216000000 320000000 400000000 510000000 560000000 650000000 725000000
+#Conf file: /vendor/etc/thermal-engine.conf
 
-# debug
-# Conf file: /vendor/etc/thermal-engine.conf
-
-[XO_THERMAL_MONITOR]
+[CCC_AP_TEMP_MITIGATION]
 algo_type monitor
-sampling 1000
-sensor xo-therm-adc
-thresholds 43000 45000 49000 70000 73000
-thresholds_clr 41000 43000 47000 68000 70000
-actions cpu0 cpu0 cpu0 cpu0+gpu cpu0+gpu
-action_info 1689600 1401600 1036800 652800+320000000
-652800+216000000
-
-[CPU_MONITOR]
-algo_type monitor
-sampling 1000
-sensor VIRTUAL-CPU
-thresholds 90000
-thresholds_clr 85000
-actions shutdown
-action_info 0
-
-[BATTERY_CHARGING_STL]
-algo_type monitor
-sampling 5000
-sensor xo-therm-adc
-thresholds 40000 42000 44000 45000 46000
-thresholds_clr 38000 40000 42000 44000 45000
-actions battery battery battery battery battery
-action_info 1 2 3 4 5
-
-[LCD_MONITOR_STATE]
-algo_type monitor
-sampling 5000
-sensor xo-therm-adc
-thresholds 62000
-thresholds_clr 60000
-actions lcd
-action_info 30
-
-[HIGH_TEMP_STATE]
-algo_type monitor
-sampling 1000
-sensor xo-therm-adc
-thresholds 62000
-thresholds_clr 60000
+sampling 10000
+sensor case-therm-adc
+thresholds 57000
+thresholds_clr 55000
 actions temp_state
-action_info 1
+action_info 5
 
-[MODEM_PROC_TEMP_MITIGATION]
-algo_type monitor
-sampling 10000
-sensor xo-therm-adc
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem_proc modem_proc
-action_info 1 3
+[SS-CPU7]
+algo_type ss
+sampling 50
+sensor apc1-cpu3-usr
+device cpu7
+set_point 95000
+set_point_clr 55000
+time_constant 0
 
-[MODEM_PA_MITIGATION]
-algo_type monitor
+[SS-CPU6]
+algo_type ss
+sampling 50
+sensor apc1-cpu2-usr
+device cpu6
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CPU5]
+algo_type ss
+sampling 50
+sensor apc1-cpu1-usr
+device cpu5
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CPU4]
+algo_type ss
+sampling 50
+sensor apc1-cpu0-usr
+device cpu4
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CPU3]
+algo_type ss
+sampling 50
+sensor apc0-cpu3-usr
+device cpu3
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CPU2]
+algo_type ss
+sampling 50
+sensor apc0-cpu2-usr
+device cpu2
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CPU1]
+algo_type ss
+sampling 50
+sensor apc0-cpu1-usr
+device cpu1
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CPU0]
+algo_type ss
+sampling 50
+sensor apc0-cpu0-usr
+device cpu0
+set_point 95000
+set_point_clr 55000
+time_constant 0
+
+[SS-CASE-THERM]
+algo_type ss
 sampling 10000
-sensor xo-therm-adc
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem modem
+sensor case-therm-adc
+device cpu0
+set_point 48000
+set_point_clr 44000
+time_constant 0
+device_max_limit 1689600
+
+[SS-CASE-THERM-1]
+algo_type ss
+sampling 10000
+sensor case-therm-adc
+device cpu0
+set_point 54000
+set_point_clr 48000
+time_constant 0
+device_max_limit 1401600
+
+[CHARGING_BATTERY_CTL]
+#algo_type monitor
+sensor case-therm-adc
+sampling 5000
+thresholds 45000 50000
+thresholds_clr 42000 45000
+actions battery battery
 action_info 2 3
-
-[VIRTUAL-CPU]
-algo_type virtual
-trip_sensor apc1-cpu0-usr
-set_point 75000
-set_point_clr 70000
-sensors apc1-cpu0-usr apc1-cpu1-usr apc1-cpu2-usr apc1-cpu3-usr apc1-l2-usr
-weights
-sampling 100
-math 2
