--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -111,3 +111,89 @@ thresholds 45000 50000
 thresholds_clr 42000 45000
 actions battery battery
 action_info 2 3
+
+[MODEM_PROC_TEMP_MITIGATION]
+algo_type monitor
+sampling 10000
+sensor case-therm-adc
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem_proc modem_proc
+action_info 1 3
+
+[MODEM_PA_MITIGATION]
+algo_type monitor
+sampling 10000
+sensor case-therm-adc
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem modem
+action_info 2 3
+
+[PID-CPU0]
+algo_type pid
+sensor apc0-cpu0-usr
+device cpu0
+sampling 50
+set_point 90000
+set_point_clr 55000
+p_const 0.7
+i_const 15.0
+d_const 0.5
+i_samples 10
+dev_units_per_calc 5000
+
+[PID-CPU1]
+algo_type pid
+sensor apc0-cpu1-usr
+device cpu1
+sampling 50
+set_point 90000
+set_point_clr 55000
+p_const 0.7
+i_const 15.0
+d_const 0.5
+i_samples 10
+dev_units_per_calc 5000
+
+[PID-CPU2]
+algo_type pid
+sensor apc0-cpu2-usr
+device cpu2
+sampling 50
+set_point 90000
+set_point_clr 55000
+p_const 0.7
+i_const 15.0
+d_const 0.5
+i_samples 10
+dev_units_per_calc 5000
+
+[PID-CPU3]
+algo_type pid
+sensor apc0-cpu3-usr
+device cpu3
+sampling 50
+set_point 90000
+set_point_clr 55000
+p_const 0.7
+i_const 15.0
+d_const 0.5
+i_samples 10
+dev_units_per_calc 5000
+
+[PID-CPU4-5-6-7]
+algo_type pid
+sensor apc1-cpu0-usr
+device cpu4
+sampling 50
+set_point 90000
+set_point_clr 55000
+p_const 0.7
+i_const 15.0
+d_const 0.5
+i_samples 10
+dev_units_per_calc 5000
+
+[PID-POPMEM]
+disable 1
