--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -1,6 +1,79 @@
 # SENSOR : ALIAS
 
+#debug
 #Conf file: /vendor/etc/thermal-engine.conf
+
+[BATTERY_CHARGING_CTL]
+algo_type monitor
+sampling 10000
+sensor case-therm-adc
+thresholds 40000 42000 44000 45000 46000
+thresholds_clr 38000 40000 42000 44000 45000
+actions battery battery battery battery battery
+action_info 1 2 3 4 5
+
+[MODEM_PA_MITIGATION]
+algo_type monitor
+sampling 10000
+sensor case-therm-adc
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem modem
+action_info 2 3
+
+[MODEM_PROC_TEMP_MITIGATION]
+algo_type monitor
+sampling 10000
+sensor case-therm-adc
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem_proc modem_proc
+action_info 1 3
+
+[CPU_MONITOR]
+algo_type monitor
+sampling 1000
+sensor VIRTUAL-CPU
+thresholds 90000
+thresholds_clr 85000
+actions shutdown
+action_info 0
+
+[LCD_MONITOR_STATE]
+algo_type monitor
+sampling 5000
+sensor xo-therm-adc
+thresholds 62000
+thresholds_clr 60000
+actions lcd
+action_info 30
+
+[MONITOR-CAMERA-MSM]
+algo_type monitor
+sampling 1000
+sensor camera-usr
+thresholds 52000 56000
+thresholds_clr 47000 53000
+actions camera camera
+action_info 1 2
+
+[BACKLIGHT_AP_TEMP_MITIGATION]
+algo_type monitor
+sampling 10000
+sensor case-therm-adc
+thresholds 45000 47000
+thresholds_clr 44000 46000
+actions lcd lcd
+action_info 1024 512
+
+[HIGH_TEMP_STATE]
+algo_type monitor
+sampling 1000
+sensor xo-therm-adc
+thresholds 62000
+thresholds_clr 60000
+actions temp_state
+action_info 1
 
 [CCC_AP_TEMP_MITIGATION]
 algo_type monitor
@@ -103,97 +176,100 @@ set_point_clr 48000
 time_constant 0
 device_max_limit 1401600
 
-[CHARGING_BATTERY_CTL]
-#algo_type monitor
-sensor case-therm-adc
-sampling 5000
-thresholds 45000 50000
-thresholds_clr 42000 45000
-actions battery battery
-action_info 2 3
+[SS-GPU]
+algo_type ss
+sampling 250
+sensor gpu0-usr
+device gpu
+set_point 95000
+set_point_clr 65000
+time_constant 0
 
-[MODEM_PROC_TEMP_MITIGATION]
-algo_type monitor
-sampling 10000
-sensor case-therm-adc
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem_proc modem_proc
-action_info 1 3
+[SS-GPU-1]
+algo_type ss
+sampling 250
+sensor gpu1-usr
+device gpu
+set_point 95000
+set_point_clr 65000
+time_constant 0
 
-[MODEM_PA_MITIGATION]
-algo_type monitor
-sampling 10000
-sensor case-therm-adc
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem modem
-action_info 2 3
-
-[PID-CPU0]
-algo_type pid
-sensor apc0-cpu0-usr
-device cpu0
-sampling 50
-set_point 90000
-set_point_clr 55000
-p_const 0.7
-i_const 15.0
-d_const 0.5
-i_samples 10
-dev_units_per_calc 5000
-
-[PID-CPU1]
-algo_type pid
-sensor apc0-cpu1-usr
-device cpu1
-sampling 50
-set_point 90000
-set_point_clr 55000
-p_const 0.7
-i_const 15.0
-d_const 0.5
-i_samples 10
-dev_units_per_calc 5000
-
-[PID-CPU2]
-algo_type pid
-sensor apc0-cpu2-usr
-device cpu2
-sampling 50
-set_point 90000
-set_point_clr 55000
-p_const 0.7
-i_const 15.0
-d_const 0.5
-i_samples 10
-dev_units_per_calc 5000
-
-[PID-CPU3]
-algo_type pid
-sensor apc0-cpu3-usr
-device cpu3
-sampling 50
-set_point 90000
-set_point_clr 55000
-p_const 0.7
-i_const 15.0
-d_const 0.5
-i_samples 10
-dev_units_per_calc 5000
+[VIRTUAL-CPU]
+algo_type virtual
+trip_sensor apc1-cpu0-usr
+set_point 75000
+set_point_clr 70000
+sensors apc1-cpu0-usr apc1-cpu1-usr apc1-cpu2-usr apc1-cpu3-usr apc1-l2-usr
+weights
+sampling 100
+math 2
 
 [PID-CPU4-5-6-7]
-algo_type pid
+#algo_type pid
+sampling 50
 sensor apc1-cpu0-usr
 device cpu4
-sampling 50
 set_point 90000
 set_point_clr 55000
-p_const 0.7
-i_const 15.0
-d_const 0.5
+p_const 0.700000
+i_const 15.000000
+d_const 0.500000
 i_samples 10
 dev_units_per_calc 5000
+freq_scale 500.000000
 
-[PID-POPMEM]
-disable 1
+[PID-CPU3]
+#algo_type pid
+sampling 50
+sensor apc0-cpu3-usr
+device cpu3
+set_point 90000
+set_point_clr 55000
+p_const 0.700000
+i_const 15.000000
+d_const 0.500000
+i_samples 10
+dev_units_per_calc 5000
+freq_scale 500.000000
+
+[PID-CPU2]
+#algo_type pid
+sampling 50
+sensor apc0-cpu2-usr
+device cpu2
+set_point 90000
+set_point_clr 55000
+p_const 0.700000
+i_const 15.000000
+d_const 0.500000
+i_samples 10
+dev_units_per_calc 5000
+freq_scale 500.000000
+
+[PID-CPU1]
+#algo_type pid
+sampling 50
+sensor apc0-cpu1-usr
+device cpu1
+set_point 90000
+set_point_clr 55000
+p_const 0.700000
+i_const 15.000000
+d_const 0.500000
+i_samples 10
+dev_units_per_calc 5000
+freq_scale 500.000000
+
+[PID-CPU0]
+#algo_type pid
+sampling 50
+sensor apc0-cpu0-usr
+device cpu0
+set_point 90000
+set_point_clr 55000
+p_const 0.700000
+i_const 15.000000
+d_const 0.500000
+i_samples 10
+dev_units_per_calc 5000
+freq_scale 500.000000
