mido: drop audio.a2dp.default
- building from here
  https://github.com/LineageOS/android_build/blob/lineage-19.1/target/product/full_base.mk#L35

Change-Id: Ib71c1abd381468ec3621d60e5ca959f738f51168

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -156,7 +156,7 @@ on charger
     setprop persist.sys.usb.config mass_storage
     start vendor.hvdcp_opti
     start vendor.power_off_alarm
-    start thermal-engine
+    restart thermal-engine
 
 on boot
     # Add a cpuset for the camera daemon
