mido: audio HAL: Enable RT priority inheritance
Test: instrumented
Bug: 181148259
Bug: 260918856
Change-Id: If56e449a9c6f1a49e372591893d8714534574e3a

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -300,6 +300,8 @@ service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
     # media gid needed for /dev/fm (radio) and for /data/misc/media (tee)
     group audio camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct oem_2901 wakelock system
     capabilities BLOCK_SUSPEND SYS_NICE
+    # setting RLIMIT_RTPRIO allows binder RT priority inheritance
+    rlimit rtprio 10 10
     ioprio rt 4
     task_profiles ProcessCapacityHigh HighPerformance
     onrestart restart audioserver
