mido: rootdir: Set msm_irqbalance ServiceCapacityLow

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -288,6 +288,7 @@ service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /vendor/etc/msm_irqb
     class core
     user root
     group root
+    task_profiles ServiceCapacityLow
 
 on charger
     start vendor.qcom-post-boot
